crates/plotnik-lib/tests/02-parser/recovery_incomplete/missing_type_name.txt
(identifier) @name ::
------------------ DIAGNOSTICS -------------------
error: expected a type name after `::`
 --> query.ptk:1:22
  |
1 | (identifier) @name ::
  |                      ^
  |
help: e.g., `::MyType`
